<resources>
    <string name="app_name">PlainText</string>
    <string name="login_info_text">Digite suas credenciais para continuar</string>
    <string name="login_slogan_quote">\"O gerenciador de senhas mais seguro\"\nBob e Alice</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="login_save_infos">Salvar informações de login</string>
    <string name="sign_in">Entrar</string>
    <string name="username">Nome</string>
    <string name="settings">Configurações</string>
    <string name="about">Sobre</string>
    <string name="add_password">Adicionar senha</string>
    <string name="notes">Notas</string>
    <string name="save">Salvar</string>
    <string name="add_name">Nome</string>
    <string name="example">TextView</string>
</resources>