<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addPasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple"
        android:gravity="bottom|start"
        android:paddingStart="30dp"
        android:paddingBottom="16dp"
        android:text="@string/password"
        android:textAlignment="gravity"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageName"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editName"
        app:srcCompat="@drawable/baseline_accessibility_24" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/add_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/editLogin"
        app:layout_constraintStart_toStartOf="@+id/imageName"
        app:layout_constraintTop_toTopOf="@+id/editLogin"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/imageLogin"
        app:layout_constraintTop_toTopOf="@+id/editPassword"
        app:srcCompat="@drawable/lock_icon" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:autofillHints="@string/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editLogin"
        app:layout_constraintStart_toStartOf="@+id/editLogin"
        app:layout_constraintTop_toBottomOf="@+id/editLogin"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/imageNotes"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="@+id/imagePassword"
        app:layout_constraintTop_toBottomOf="@+id/imagePassword"
        app:srcCompat="@drawable/baseline_article_24" />

    <EditText
        android:id="@+id/editNotes"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/savePasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/button_selector"
        android:onClick="onSaveClicked"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

